Registration v2: Fixing margin issues on IE7 sign up box.

--- a/app/stylesheets/ie7.css
+++ b/app/stylesheets/ie7.css
@@ -1,3 +1,3 @@
 .registration1 .right #redbox {
-   margin-left: -150px;
+   margin-left: -90px;
 }
